# RAISE-Hackathon

./: .gitattributes  .gitignore  COMPETITIVE_ANALYSIS.md  HACKATHON_PLAN.md  README.md  package-lock.json
v3/: .env.example  .gitignore  API_KEYS_SETUP.txt  README.md  V2_INDEX.md  config.json  p.json  package-lock.json  package.json  pyproject.toml  requirements.txt  systemprompt.txt  todo  tsconfig.electron.json  tsconfig.json  vite.config.ts
v3/.pi/: models.json  settings.json
v3/.pi/extensions/: pythos-safe-tools.ts
v3/android/pythos-remote/: README.md  settings.gradle
v3/scripts/: install-ollama-models.ps1  install-ollama-models.sh  install-pi-models.ps1  install-pi-models.sh  install-vosk-model.ps1  install-vosk-model.sh  pythos-mcp-server.mjs  setup-venv.ps1  setup-venv.sh  test.ps1  test.sh
v3/src/main/: appLauncher.ts  assistantText.ts  config.ts  dateContext.ts  echoBridge.ts  externalServices.ts  filesystemAccess.ts  geminiClient.ts  intentRouter.ts  jsonl.ts  localTools.ts  locationUtils.ts  logger.ts  main.ts  mathExpression.ts  mcpManager.ts  ollamaClient.ts  ollamaFallback.ts  ollamaRuntime.ts  openRouterClient.ts  piRpc.ts  pythonWorker.ts  screenCapture.ts  skillRegistry.ts  systemAlarm.ts  toolRetry.ts  toolRuntime.ts  userMemory.ts  voiceTranscript.ts
v3/src/preload/: preload.cjs  preload.ts
v3/src/pythos/: __init__.py  config.py  context_memory.py  debug_log.py  echo_realtime_worker.py  echo_tools.py  local_voice.py  network_monitor.py  protocol.py  speech_to_text.py  text_to_speech.py  voice_mode.py  worker.py
v3/src/renderer/: App.tsx  (+3 more)
(+41 files in other folders)
